# drs

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  GITHUB_ACTIONS_SETUP.md  LICENSE  POOL_ANTI_AFFINITY_RULES.md  PROMETHEUS_METRICS.md  README.md  SECURITY.md  TESTING_SETUP_SUMMARY.md  check_compliance.py  check_vm_datasets.py  debug_actegy_example.py  debug_cluster_mismatch.py  debug_pool_rules.py  debug_pool_test.py  deploy.sh  last_collection_time.txt  refresh_vcenter_data.py  rules_engine_main.py  setup_cron.sh  test_ai_models.py  test_ai_prediction.py  test_case_sensitivity.py  test_cluster_fix.py  test_connections.py  test_pool_anti_affinity.py  test_real_data.py  test_staffscc_example.py  test_streamlit_ai.py  test_violation_case.py  test_vm_metrics_fix.py  train_ai_models.py  vcenter-drs.service
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml  test-cron.yml
ai_optimizer/: __init__.py  config.py  custom_config.json  data_collector.py  exceptions.py  ml_engine.py  optimization_engine.py
ai_optimizer/models/: feature_names.json  gradient_boosting_model.pkl  gradient_boosting_scaler.pkl  random_forest_model.pkl  training_results.json
tests/: test_ai_basic.py  test_ai_data_collector.py  test_ai_ml_engine.py  test_ai_optimization_engine.py
vcenter_drs/: .gitignore  Makefile  README.md  WIKI.md  add_power_status_to_vms.sql  config.py  drs-compliance.service  drs-compliance.timer  drs-refresh.service  drs-refresh.timer  exceptions.py  install_systemd_jobs.sh  last_collection_time.txt  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  streamlit_app.py  test_insert_exception.py
vcenter_drs/ai_optimizer/: config.py  data_collector.py  exceptions.py  optimization_engine.py
vcenter_drs/api/: __init__.py  collect_and_store_metrics.py  collect_metrics_test.py  core-types.xsd  query-messagetypes.xsd  reflect-messagetypes.xsd  test_vcenter_client.py  vcenter_client.py  vcenter_client_pyvomi.py  vim-messagetypes.xsd  vim.wsdl  vimService.wsdl
vcenter_drs/db/: init_db.py  metrics_db.py
vcenter_drs/optimizer/: DECISION_PROCESS.md  MODERN_AI_APPROACHES.md  PRACTICAL_AI_INTEGRATION.md  README.md  RESOURCE_REQUIREMENTS.md  ai_enhanced_optimizer.py  optimizer.py  simple_demo.py  test_optimizer.py
vcenter_drs/rules/: rules.json  rules_engine.py
vcenter_drs/tests/: __init__.py  conftest.py  test_ai_data_collector.py  test_compliance_rules.py  test_config.py  test_metrics.py  test_metrics_db.py  test_remediation.py  test_rules_engine.py  test_smoke.py  test_ui_logic.py  test_vcenter_client.py  test_violation_display.py
~/.streamlit/: config.toml
